--- a/MyToolBox/Views/Base.lproj/Main.storyboard
+++ b/MyToolBox/Views/Base.lproj/Main.storyboard
@@ -248,8 +248,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YSa-sl-sZa">
+                                <rect key="frame" x="16" y="301" width="343" height="428"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="428" id="MY1-1f-AtZ"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PriceInfoCell" id="pVL-uL-dD7">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="150"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pVL-uL-dD7" id="cKS-GN-Ega">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="149.66666666666666"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scan item to get barcode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AN6-PC-r7Z">
-                                <rect key="frame" x="25" y="292.66666666666669" width="193" height="21"/>
+                                <rect key="frame" x="16" y="238" width="193" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="mXz-rm-mC0"/>
                                 </constraints>
@@ -257,58 +274,19 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DEA-Cd-zTQ">
-                                <rect key="frame" x="17" y="335" width="342" height="102"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CXF-j8-qYv">
-                                        <rect key="frame" x="0.0" y="0.0" width="121" height="66.333333333333329"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="121" id="lm6-RX-Cf1"/>
-                                        </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scan Item" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BCK-n4-P0V">
-                                        <rect key="frame" x="129" y="-1" width="205" height="20.333333333333332"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scan Item" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uc0-Ns-SaD">
-                                        <rect key="frame" x="129" y="27.333333333333314" width="142" height="39"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="39" id="smL-wE-96y"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="CXF-j8-qYv" secondAttribute="bottom" constant="35.666666666666671" id="66Z-zz-7Wh"/>
-                                    <constraint firstItem="uc0-Ns-SaD" firstAttribute="top" secondItem="BCK-n4-P0V" secondAttribute="bottom" constant="8" id="6Fo-xA-Gtb"/>
-                                    <constraint firstItem="uc0-Ns-SaD" firstAttribute="bottom" secondItem="DEA-Cd-zTQ" secondAttribute="bottomMargin" constant="-27.666666666666686" id="JcM-Ts-rfT"/>
-                                    <constraint firstAttribute="trailing" secondItem="uc0-Ns-SaD" secondAttribute="trailing" constant="71" id="RBm-LO-AmC"/>
-                                    <constraint firstItem="BCK-n4-P0V" firstAttribute="leading" secondItem="CXF-j8-qYv" secondAttribute="trailing" constant="8" symbolic="YES" id="V9l-fG-dTI"/>
-                                    <constraint firstItem="BCK-n4-P0V" firstAttribute="leading" secondItem="uc0-Ns-SaD" secondAttribute="leading" id="njk-sz-ovL"/>
-                                    <constraint firstItem="BCK-n4-P0V" firstAttribute="trailing" secondItem="DEA-Cd-zTQ" secondAttribute="trailingMargin" id="o1i-4b-7ys"/>
-                                    <constraint firstItem="BCK-n4-P0V" firstAttribute="top" secondItem="DEA-Cd-zTQ" secondAttribute="top" constant="-1" id="pdz-AS-KRI"/>
-                                    <constraint firstItem="CXF-j8-qYv" firstAttribute="centerY" secondItem="DEA-Cd-zTQ" secondAttribute="centerY" constant="-17.833333333333336" id="yQA-3h-CRe"/>
-                                    <constraint firstItem="CXF-j8-qYv" firstAttribute="leading" secondItem="DEA-Cd-zTQ" secondAttribute="leading" id="zkQ-tA-9cj"/>
-                                </constraints>
-                            </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YSa-sl-sZa">
-                                <rect key="frame" x="16" y="423" width="343" height="306"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </tableView>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CRg-QG-ivX">
+                                <rect key="frame" x="0.0" y="140" width="375" height="56"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="DEA-Cd-zTQ" firstAttribute="centerX" secondItem="WQX-rI-QrV" secondAttribute="centerX" id="82e-wq-kIz"/>
-                            <constraint firstItem="AN6-PC-r7Z" firstAttribute="leading" secondItem="To0-u7-Li1" secondAttribute="leading" constant="25" id="B6m-xj-ZNF"/>
-                            <constraint firstItem="DEA-Cd-zTQ" firstAttribute="top" secondItem="AN6-PC-r7Z" secondAttribute="bottom" constant="21.333333333333314" id="JWW-Eb-Qd1"/>
-                            <constraint firstItem="DEA-Cd-zTQ" firstAttribute="trailing" secondItem="WQX-rI-QrV" secondAttribute="trailingMargin" id="SO4-t6-zuA"/>
-                            <constraint firstItem="To0-u7-Li1" firstAttribute="bottom" secondItem="DEA-Cd-zTQ" secondAttribute="bottom" constant="292" id="vpp-Nf-wjJ"/>
+                            <constraint firstItem="AN6-PC-r7Z" firstAttribute="leading" secondItem="To0-u7-Li1" secondAttribute="leading" constant="16" id="B6m-xj-ZNF"/>
+                            <constraint firstItem="YSa-sl-sZa" firstAttribute="bottom" secondItem="To0-u7-Li1" secondAttribute="bottom" id="QrF-aY-WYe"/>
+                            <constraint firstItem="YSa-sl-sZa" firstAttribute="trailing" secondItem="WQX-rI-QrV" secondAttribute="trailingMargin" id="h9b-SP-Bwb"/>
+                            <constraint firstItem="YSa-sl-sZa" firstAttribute="top" secondItem="AN6-PC-r7Z" secondAttribute="bottom" constant="42" id="jsd-58-6cs"/>
+                            <constraint firstItem="YSa-sl-sZa" firstAttribute="leading" secondItem="AN6-PC-r7Z" secondAttribute="leading" id="nml-m4-cwv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="To0-u7-Li1"/>
                     </view>
@@ -322,9 +300,7 @@
                     <connections>
                         <outlet property="barcode" destination="AN6-PC-r7Z" id="gDe-T1-aq2"/>
                         <outlet property="displayPriceInfoTableView" destination="YSa-sl-sZa" id="Wgd-Ax-efY"/>
-                        <outlet property="itemImage" destination="CXF-j8-qYv" id="HoU-gy-zeb"/>
-                        <outlet property="itemName" destination="BCK-n4-P0V" id="toY-kS-Qhf"/>
-                        <outlet property="itemPrice" destination="uc0-Ns-SaD" id="gst-h3-Eve"/>
+                        <outlet property="searchBar" destination="CRg-QG-ivX" id="eZx-3i-T0X"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ggc-0H-Fg1" userLabel="First Responder" sceneMemberID="firstResponder"/>
