--- a/MyToolBox/Controllers/PriceInfoCell.xib
+++ b/MyToolBox/Controllers/PriceInfoCell.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,47 +20,69 @@
                 <rect key="frame" x="0.0" y="0.0" width="370" height="149.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UrT-dK-H3v">
-                        <rect key="frame" x="0.0" y="0.0" width="149" height="150"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="149" id="lU2-cy-qZb"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="moP-uf-qhs">
-                        <rect key="frame" x="164" y="0.0" width="206" height="106"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZE9-Nn-qPu">
-                        <rect key="frame" x="164" y="114" width="151" height="35"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="35" id="H0t-XN-Ydq"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="4cX-IH-IRF">
+                        <rect key="frame" x="16" y="11" width="338" height="128"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UrT-dK-H3v">
+                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="UrT-dK-H3v" secondAttribute="height" multiplier="1:1" id="U4D-Uq-dAZ"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="n3q-oF-WMX">
+                                <rect key="frame" x="138" y="0.0" width="200" height="128"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="moP-uf-qhs">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="moP-uf-qhs" secondAttribute="height" multiplier="10:2" id="pao-1S-7qe"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ePO-Wa-2fO">
+                                        <rect key="frame" x="0.0" y="40" width="200" height="88"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZE9-Nn-qPu">
+                                                <rect key="frame" x="0.0" y="0.0" width="120" height="88"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="★" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9If-cp-vmy">
+                                                <rect key="frame" x="120" y="0.0" width="80" height="88"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="9If-cp-vmy" secondAttribute="height" multiplier="10:11" id="3u9-LG-gCm"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="9If-cp-vmy" secondAttribute="trailing" id="VO8-ln-tmw"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="ZE9-Nn-qPu" secondAttribute="bottom" constant="-10" id="7Dg-Eq-2OF"/>
-                    <constraint firstItem="moP-uf-qhs" firstAttribute="leading" secondItem="ZE9-Nn-qPu" secondAttribute="leading" id="Cjb-yU-PaY"/>
-                    <constraint firstItem="moP-uf-qhs" firstAttribute="leading" secondItem="UrT-dK-H3v" secondAttribute="trailing" constant="15" id="GmI-zG-3vD"/>
-                    <constraint firstItem="UrT-dK-H3v" firstAttribute="top" secondItem="moP-uf-qhs" secondAttribute="top" id="HQO-HI-8OY"/>
-                    <constraint firstItem="UrT-dK-H3v" firstAttribute="top" secondItem="QXt-kG-Ff6" secondAttribute="top" id="PeR-Ci-WUP"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="ZE9-Nn-qPu" secondAttribute="trailing" constant="39" id="Sie-jZ-UKM"/>
-                    <constraint firstAttribute="trailing" secondItem="moP-uf-qhs" secondAttribute="trailing" id="agy-lb-9CI"/>
-                    <constraint firstItem="ZE9-Nn-qPu" firstAttribute="top" secondItem="moP-uf-qhs" secondAttribute="bottom" constant="8" id="dZc-vS-CeT"/>
-                    <constraint firstItem="UrT-dK-H3v" firstAttribute="centerY" secondItem="QXt-kG-Ff6" secondAttribute="centerY" id="g1g-Um-d0V"/>
-                    <constraint firstItem="UrT-dK-H3v" firstAttribute="leading" secondItem="QXt-kG-Ff6" secondAttribute="leading" id="yvO-BA-uvG"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="4cX-IH-IRF" secondAttribute="trailing" id="0pa-FI-q27"/>
+                    <constraint firstItem="4cX-IH-IRF" firstAttribute="leading" secondItem="QXt-kG-Ff6" secondAttribute="leadingMargin" id="Hoj-2Y-YyF"/>
+                    <constraint firstItem="4cX-IH-IRF" firstAttribute="top" secondItem="QXt-kG-Ff6" secondAttribute="topMargin" id="Ibc-8P-RZ4"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="4cX-IH-IRF" secondAttribute="bottom" id="QMD-Oq-3YX"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="itemImage" destination="UrT-dK-H3v" id="cpU-vl-TzL"/>
                 <outlet property="itemName" destination="moP-uf-qhs" id="l8i-et-fqu"/>
                 <outlet property="itemPrice" destination="ZE9-Nn-qPu" id="Wib-kj-zHe"/>
+                <outlet property="starOrNot" destination="9If-cp-vmy" id="pc9-kf-Cca"/>
             </connections>
-            <point key="canvasLocation" x="43" y="-128"/>
+            <point key="canvasLocation" x="55" y="-117"/>
         </tableViewCell>
     </objects>
 </document>
